<resources>
    <string name="app_name">Imobil Android App</string>
    <string name="placeholder">Placeholder</string>
    <string name="enterYourDetails">Enter your account details below.</string>
    <string name="password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="ForgotYourPassword">Forgot your password?</string>
    <string name="Login">Login</string>
    <string name="LoginGoogle">Log in with Google</string>
    <string name="DontHaveAnAccount">Don\'t have an account?</string>
    <string name="SignUp">Sign up</string>
    <string name="LogIn">Log in</string>
    <string name="ForgotPassword">Forgot password</string>
    <string name="PasswordResetLink">Password reset link sent to your email address.</string>
    <string name="BackToLogin">Back to Log in</string>
    <string name="SendResetLink">Send Reset Link</string>
    <string name="pleaseUseValidEmail">Please use a valid email address</string>
    <string name="PleaseUseValidPassword">Please enter a valid password</string>
    <string name="wrong_email">Email is not valid!</string>
    <string name="insufficient_chars">Not enough characters!</string>
    <string name="lacks_digit">Password needs to contain a number!</string>
    <string name="pwd_helper">At least 8 characters and one number.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whatAreYouInterested">What are you interested in?</string>
    <string name="Category">Category</string>
    <string name="correct_email">Valid email address format</string>
    <string name="login_button">Login Button</string>
    <string name="google_button">Google Button</string>
    <string name="invalidPassword">Invalid Username or Password</string>
    <string name="succesfulLogin">Successful Login</string>
    <string name="create_acco">Create account</string>
    <string name="sign_up_for">Sign up for free and become a member.</string>
    <string name="email">Email</string>
    <string name="passwd">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_acc">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_google">Sign up with Google</string>
    <string name="empty_field">Field cannot be empty!</string>
    <string name="invalid_passwd">Invalid password!</string>
    <string name="insufficient_letters">Not enough letters!</string>
    <string name="filter_by">Filter by:</string>
    <string name="order_by">Order by:</string>
    <string name="most_popular">Most popular</string>
    <string name="favourites">Favourites</string>
    <string name="log_in_to_view_fav">Log in to view your favourites</string>
    <string name="info_message">You can add, view, or edit your favourites once you\'ve logged in </string>
    <string name="home">Home</string>
    <string name="reset_passwd">Reset password</string>
    <string name="create_new_passwd">Create new password for your account.</string>
    <string name="confirm_passwd">Confirm password</string>
    <string name="no_match_passwd">Passwords do not match!</string>
    <string name="for_toast_error">Something is wrong</string>
    <string name="for_toast_okay">Good job!</string>
    <string name="price_example">712,123 lei</string>
    <string name="title_example">Deamy Treehouse Above Park City</string>
    <string name="purchase">Purchase</string>
    <string name="description">Description</string>
    <string name="long_text_example">"Lörem ipsum infraling nyr platoren preska platin. Okun vugt serat, tetrangen. Farat heterovis husanar ifall resade. Satsig mitulåd gyn. Faranat fehugon pneumaskop respektive spökgarn tonöning. Teger donök.  Termopod Dylanman i tevänas om teras prehepp. Förpappring. Anöde kvasiskade sogisk, donedat att terravision. Kare mida. Ilogi löhung på samude. Skimma wiki att demynar.  Detehuvis nemykaligen i rutkod i regen alltså nyhet. Bebel pos ultral ing osovis. Dinade pede, lagon respektive homopangen, i predast. Bek saktiga gohåssa. Epil kasam väck ses seling. Väsat beng, trisk, juholtare. "</string>
    <string name="location">Location</string>
    <string name="location_example">City, Country</string>
    <string name="share">Share</string>
    <string name="placeholder_seller_name">Jordan Henderson</string>
    <string name="placeholder_join_date">Joined in July 2014</string>
    <string name="placeholder_response_rate">Response rate: 97%</string>
    <string name="placeholder_response_time">Response time: within an hour</string>
    <string name="contact_seller">Contact seller</string>
    <string name="sign_in_as_guest">Sign in as a guest</string>
    <string name="or_word">or</string>
    <string name="favorites">Favorites</string>
    <string name="to_fav">Go to favourites</string>
    <string name="search">Search</string>
    <string name="search_for_house">Search for house</string>
    <string name="lorem_ipsum">Designers tend to cut the lorem ipsum text when it pleases them to keep their </string>
    <string name="what_are_you">What are you interested in?</string>
    <string name="latest">Latest</string>
    <string name="see_everything">See everything</string>
    <string name="house_random_name_1">Dreamy Treehouse Above Park City asdsa</string>
    <string name="house_random_name_2">Mother Eve Tiny Apartment</string>
    <string name="house_random_name_3">Riverside Shipping Container Tiny Home</string>
    <string name="house_random_name_4">Newly Built City Central Apartment</string>
    <string name="location_suceava">Suceava, Romania</string>
    <string name="location_bucuresti">Bucuresti, Romania</string>
    <string name="location_cluj">Cluj, Romania</string>
    <string name="price_1">712250 lei</string>
    <string name="price_2">600000 lei</string>
    <string name="price_3">1000000 lei</string>
    <string name="big_house">Big Houses</string>
    <string name="small_house">Small Houses</string>
    <string name="item_1">Item #1</string>
    <string name="item_2">Item #2</string>
    <string name="item_3">Item #3</string>
    <string name="searched_for">You searched for: </string>
    <string name="device_type">Mobile</string>
    <string name="account_created">User registered successfully!</string>
    <string name="failed_to_create">Email is already being used!</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="millie">James Milner</string>
    <string name="all_listings">All listings</string>
    <string name="my_listings">My listings</string>
    <string name="failed_to_login">Email or password is wrong!</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full name</string>
    <string name="full_name_placeholder">James Milner</string>
    <string name="edit">Edit</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="birth_date_placeholder">05.05.2000</string>
    <string name="email_placeholder">james.milner@example.com</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_placeholder">0123456789</string>
    <string name="address">Address</string>
    <string name="address_not_provided">Not provided</string>
    <string name="login_security"><![CDATA[Login & security]]></string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="logout_alert_message">Are you sure, do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nso">logoutDialogFragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="save">Save</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="cancel">Cancel</string>
    <string name="space">" "</string>
    <string name="point">.</string>
    <string name="shared_pref">MyPref</string>
    <string name="success">Success</string>
    <string name="error_code">"Error code: "</string>
    <string name="failed">Failed</string>
    <string name="search_results_placeholder">74 results for "Dreamy"</string>
    <string name="search_results_placeholder_activity">results for: </string>
    <string name="nothing_found">Nothing found!</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="delete_success">Listing deleted successfully</string>
    <string name="you_need_to_have_account">You must be logged in to access your profile</string>
    <string name="you_need_to_be_connected_to_access_favourites">You must be logged in to have access to favourites</string>
    <string name="understood">I understand</string>
    <string name="to_login">Take me to login</string>
    <string name="add_new"> Add new</string>
    <string name="details"> Details</string>
    <string name="be_thorough"> Be as thorough as you can</string>
    <string name="title">Title</string>
    <string name="select_category">Select category</string>
    <string name="choose_category">Choose a category</string>
    <string name="price">Price (lei)</string>
    <string name="name_your_price">Name your price</string>
    <string name="photos_and_videos">Photos &amp; videos</string>
    <string name="add_photos">Add your photos here</string>
    <string name="enter_description">Enter a description</string>
    <string name="description_details">Description details</string>
    <string name="description_helper">0/100 mandatory characters</string>
    <string name="description_helper_2">/100 mandatory characters</string>
    <string name="contact_info">Contact info</string>
    <string name="preview">Preview</string>
    <string name="publish">Publish</string>
    <string name="positive">All Good</string>
    <string name="success_create_listing">Listing posted successfully!</string>
    <string name="this_is_a_preview">This is a preview of your listing</string>
    <string name="you_must_add_photos">You must add at least one photo</string>
    <string name="add_new_listing">Add new listing</string>
    <string name="only_9_photos">You can only add 9 photos</string>
    <string name="invalid_phone_number">Phone number is not valid</string>
    <string name="delete">Delete</string>
    <string name="favourites_alert_message">Are you sure you want to delete?</string>
    <string name="unable_to_send_email">Unable to send Email</string>
    <string name="email_sent">Email Sent</string>
    <string name="title_messages_text">You haven\'t sent any messages yet.</string>
    <string name="start_exploring">Start exploring</string>
    <string name="messages_text">This is where you\'ll find all of your chats and messages.</string>

    <string name="you_cant_view_listing_posted">You can\'t preview a listing that is already posted</string>
    <string name="you_need_to_have_account_favorites">You must be logged in to access your favorites</string>
    <string name="added_to_fav">Listing added to favourites</string>
    <string-array name="spinner_categories">
        <item>Big Houses</item>
        <item>Small Houses</item>
    </string-array>
    >>>>>>> 53f5211e3c91e7d493a73928c9239138356a75b7
</resources>