<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.onboarding.login.LogInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo_assist"
            android:layout_width="@dimen/logo_width"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/space_16dp"
            android:background="@drawable/logo_assist_tagline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tv_title_login"
            style="@style/styleTitleOnboarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24dp"
            android:text="@string/log_in"
            app:layout_constraintLeft_toLeftOf="@id/iv_logo_assist"
            app:layout_constraintTop_toBottomOf="@id/iv_logo_assist" />

        <TextView
            android:id="@+id/tv_subtitle_login"
            style="@style/styleSubTitleOnboarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4dp"
            android:text="@string/enterYourDetails"
            app:layout_constraintLeft_toLeftOf="@id/tv_title_login"
            app:layout_constraintTop_toBottomOf="@id/tv_title_login" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/styleTitleEditBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20dp"
            android:text="@string/email"
            app:layout_constraintLeft_toLeftOf="@id/tv_subtitle_login"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle_login"

            />

        <EditText
            android:id="@+id/et_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_4dp"
            android:layout_marginEnd="@dimen/space_16dp"
            android:background="@drawable/input_border_normal"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="@dimen/space_12dp"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <TextView
            android:id="@+id/tv_error_email"
            style="@style/styleWarningRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4dp"
            android:text="@string/pleaseUseValidEmail"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/et_email_input" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/styleTitleEditBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_28dp"
            android:text="@string/password"
            app:layout_constraintLeft_toLeftOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/et_email_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_enter_passwd"
            app:layout_constraintLeft_toLeftOf="@id/tv_password"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginEnd="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:expandedHintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwd"
                android:background="@drawable/input_border_normal"
                android:fontFamily="@font/inter"
                android:inputType="textPassword"
                android:padding="@dimen/placeholder_padding"
                android:textFontWeight="500"
                android:textSize="@dimen/text_16sp"
                tools:layout_editor_absoluteX="16dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_first_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_70dp"
            android:src="@drawable/vertical_line"
            app:layout_constraintBottom_toTopOf="@+id/tv_error_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password" />

        <TextView
            android:id="@+id/tv_error_password"
            style="@style/styleWarningRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4dp"
            android:text="@string/PleaseUseValidPassword"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_enter_passwd" />

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="@dimen/space_15dp"
            android:layout_height="@dimen/space_15dp"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_28dp"
            android:background="@drawable/input_border_normal"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_enter_passwd" />

        <TextView
            android:id="@+id/tv_remember"
            style="@style/styleCheckBoxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_6dp"
            android:layout_marginTop="@dimen/space_28dp"
            android:text="@string/RememberMe"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintLeft_toRightOf="@id/cb_remember"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_enter_passwd" />

        <TextView
            android:id="@+id/tv_forgot_pass"
            style="@style/styleAssistBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_28dp"
            android:layout_marginEnd="@dimen/space_10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/ForgotYourPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_enter_passwd" />

        <Button
            android:id="@+id/btn_login"
            style="@style/styleLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_40dp"
            android:layout_marginEnd="@dimen/space_16dp"
            android:layout_marginBottom="@dimen/space_276dp"
            android:background="@drawable/login_button_border"
            android:text="@string/Login"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_pass"
            android:textAlignment="center"
            android:textAppearance="@style/sign_up_google"
            android:textFontWeight="600"
            android:fontFamily="@font/inter"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_16dp"
            android:layout_marginEnd="@dimen/space_16dp"
            android:background="@drawable/border_passwd"
            android:drawableStart="@drawable/google_logo"
            android:drawablePadding="@dimen/google_logo_padding"
            android:fontFamily="@font/inter"
            android:text="@string/LoginGoogle"
            android:textAlignment="center"
            android:textAppearance="@style/sign_up_google"
            android:textFontWeight="600"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24dp"
            android:layout_marginBottom="@dimen/space_178dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_google">

            <TextView
                android:id="@+id/tv_question_account"
                style="@style/styleQuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DontHaveAnAccount" />

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/styleAssistBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="@dimen/space_4dp"
                android:text="@string/SignUp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/styleQuestionText"
                android:text="@string/or_word"
                android:paddingStart="@dimen/space_4dp"/>

            <TextView
                android:id="@+id/tv_sign_in_as_guest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/styleAssistBlue"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="@dimen/space_4dp"
                android:text="@string/sign_in_as_guest" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>