<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_logout_dialog"
    tools:context=".screens.profile.LogoutDialogFragment">

    <TextView
        android:id="@+id/tv_logout_title"
        style="@style/logout_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_48dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_logout_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_56dp"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_marginEnd="@dimen/space_56dp"
        android:singleLine="false"
        android:text="@string/logout_alert_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logout_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_52dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logout_description"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/space_48dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yes_button"
            style="@style/sign_up_google"
            android:layout_width="@dimen/space_120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_border"
            android:text="@string/yes"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/no_button"
            style="@style/sign_up_google"
            android:layout_width="@dimen/space_120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_30dp"
            android:background="@drawable/login_button_border"
            android:text="@string/no"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>