<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.averageuser.fragments.FavouritesEmptyFragment">

    <TextView
        android:id="@+id/tv_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_32dp"
        android:fontFamily="@font/inter"
        android:text="@string/favourites"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="@dimen/text_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20dp"
        android:src="@drawable/background_empty_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_favourites" />

    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_51dp"
        android:fontFamily="@font/inter"
        android:text="@string/log_in_to_view_fav"
        android:textColor="@color/gray_700"
        android:textFontWeight="700"
        android:textSize="@dimen/text_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_background" />

    <TextView
        android:id="@+id/tv_info_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter"
        android:maxLines="2"
        android:text="@string/info_message"
        android:textColor="@color/gray_300"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_log_in"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_40dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:background="@drawable/sign_up_btn"
        android:text="@string/log_in"
        android:textAppearance="@style/sign_up_btn"
        android:textFontWeight="600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_info_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_12dp"
        android:background="@drawable/border_passwd"
        android:text="@string/home"
        android:textAppearance="@style/sign_up_google"
        android:textFontWeight="600"
        />
</androidx.constraintlayout.widget.ConstraintLayout>