<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space_16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/item_listing_with_desc_border">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="154dp"
        android:layout_height="143dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_marginBottom="@dimen/space_15dp"
        android:layout_marginStart="@dimen/space_12dp"
        android:background="@drawable/photo_replacement_2"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintStart_toEndOf="@+id/iv_photo"
        android:layout_marginStart="@dimen/space_16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/space_12dp"
        android:textSize="@dimen/text_14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter"
        android:textFontWeight="600"
        android:maxLines="3"
        android:maxWidth="@dimen/space_120dp"
        android:gravity="start"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginEnd="@dimen/space_48dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/inter"
        android:maxLines="3"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/gray_400"
        android:textSize="@dimen/text_12sp"
        app:layout_constraintStart_toEndOf="@id/iv_photo"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:ellipsize="end"
        android:maxWidth="@dimen/space_140dp"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintStart_toEndOf="@id/iv_photo"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="@string/placeholder"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"
        android:textSize="@dimen/text_14sp"/>

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/iv_photo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:src="@drawable/toolbar_line"
        android:layout_marginTop="@dimen/space_20dp"/>

    <TextView
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/space_20dp"
        android:layout_marginBottom="@dimen/space_20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_line"
        android:layout_marginTop="@dimen/space_20dp"
        android:text="@string/edit"
        android:fontFamily="@font/inter"
        android:textSize="@dimen/text_14sp"
        android:textColor="@color/blue_500"
        android:textFontWeight="600"/>

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/tv_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/space_40dp"
        android:layout_marginBottom="@dimen/space_20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_line"
        android:layout_marginTop="@dimen/space_20dp"
        android:text="@string/delete"
        android:fontFamily="@font/inter"
        android:textSize="@dimen/text_14sp"
        android:textColor="@color/red_500"
        android:textFontWeight="600"/>


</androidx.constraintlayout.widget.ConstraintLayout>